# BMSTU-VK-Education

./: .gitignore  README.md
alg/: .gitignore  1.4.cpp  2.1.cpp  3.2.cpp  4.2.cpp  5.2.cpp  6.4.cpp  7.3.cpp  CMakeLists.txt
alg/dz1/: 1.4.cpp  7.3.cpp
alg/dz2/: 1  1.cpp  2  2.cpp  4_2  4_2.cpp  test.cpp
alg/dz3/: 2.cpp  3  3.cpp  4.cpp
alg/dz3/ex1/: ArcGraph.cpp  CMakeLists.txt  GraphFunction.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  main.cpp
alg/dz3/ex1/include/: ArcGraph.h  GraphFunction.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h
alg/rk/: 1.cpp  2.cpp  3.cpp
web/: .gitignore  gunicorn_config.py  my_wsgi.py  statistics.txt
web/askme_tanev/: askme.conf  manage.py  nginx.conf  requirements.txt
web/askme_tanev/app/: admin.py  forms.py  models.py  urls.py  views.py
web/askme_tanev/app/management/commands/: fill_db.py
web/askme_tanev/app/migrations/: 0001_initial.py  0002_alter_answer_correct.py
web/askme_tanev/askme_tanev/: asgi.py  settings.py  urls.py  wsgi.py
web/askme_tanev/static/js/: answer_correct_flag_ajax.js  like_ajax.js
web/askme_tanev/templates/: ask.html  base.html  hot.html  index.html  login.html  question_details.html  settings.html  signup.html  tag.html
web/askme_tanev/templates/component/: answer.html  form.html  paginator.html  question.html  rating_bar.html  user_card.html
web/askme_tanev/templates/layouts/: answer.html  base.html  paginator.html  question.html
